# PoBTradeHelper

./: .gitignore  .gitmodules  LICENSE  README.md  com.google.chrome.example.echo-win.json  com.google.chrome.pob.tradehelper-win.json  install.bat  native-messaging-example-host  native-messaging-example-host.bat  pob-trade-helper-native-host  pob-trade-helper-native-host.bat  pyproject.toml  uninstall.bat
client/: PobTradeHelper.nsi  com.google.chrome.pob.tradehelper-win.json  pob-trade-helper-native-host  pob-trade-helper-native-host.bat
client/python-3.10.11-embed-amd64/: python310._pth
extension/: manifest.json
extension/css/: style.css  trade.css
extension/js/: background.js  trade-injected.js  trade.js
