[tool.poetry]
name = "pob_wrapper"
version = "0.1.1"
readme = "README.md"
description = "Wrapper to control Path of Building"
authors = ["coldino <antoranthony.purchase@gmail.com>"]
license = "LGPL-3.0-or-later"
keywords = ['pathofexile','pathofbuilding','pob']
homepage = 'https://github.com/coldino/pob_wrapper/'
packages = [
    { include = "pob_wrapper/pob_wrapper" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.10"
pywin32 = "^304"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
rope = "^1.3.0"
prompt-toolkit = "^3.0.30"
Pygments = "^2.13.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
